--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -1,6 +1,6 @@
 :root {
-	--hint: 1rem;
-	--arimo: 'Arimo', sans-serif;
+	--Arimo: 'Arimo', sans-serif;
+	--Hind: 'Hind', sans-serif;
 	--bG-cc1: #FEC845;
 	--fG-cc1: #65065A;
 }
