creando el tercer combo

--- a/css/styles.css
+++ b/css/styles.css
@@ -514,5 +514,21 @@ th {
 	color: #65065A;
 }
 
+.cc2-bg {
+	background-color: #E1DCE3;
+}
+
+.cc2-fr {
+	color: #271764;
+}
+
+.cc3-bg {
+	background-color: #E4A824;
+}
+
+.cc3-fr {
+	color: #242424;
+}
+
 
 /*# sourceMappingURL=styles.css.map */
