incluyendo el quinto combo

--- a/css/styles.css
+++ b/css/styles.css
@@ -538,5 +538,13 @@ th {
 	color: #642626;
 }
 
+.cc5-bg {
+	background-color: #8D2A2A;
+}
+
+.cc5-fg {
+	color: #963636;
+}
+
 
 /*# sourceMappingURL=styles.css.map */
