arreglando el fg del último combo

--- a/css/styles.css
+++ b/css/styles.css
@@ -539,11 +539,11 @@ th {
 }
 
 .cc5-bg {
-	background-color: #8D2A2A;
+	background-color: #EFE6DF;
 }
 
 .cc5-fg {
-	color: #963636;
+	color: #8D2A2A;
 }
 
 
