nuevas combianciones sacadas de a11random

--- a/src/css/_variables.css
+++ b/src/css/_variables.css
@@ -11,4 +11,12 @@
 	--fG-cc4: #642626;
 	--bG-cc5: #EFE6DF;
 	--fG-cc5: #8D2A2A;
+  --bG-cc6: #c0f209;
+  --fG-cc6: #112524;
+  --bG-cc7: #0fe1be;
+  --fG-cc7: #431729;
+  --bG-cc8: #f0e7ff;
+  --fG-cc8: #3243a2;
+  --bG-cc9: #053584;
+  --fG-cc9: #d2f6fd;
 }
